--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "http://dev.xrom.cc:8021/api/$1"
+      "source": "/api/v1/:path*",
+      "destination": "http://dev.xrom.cc:8021/api/:path*"
     }
   ]
 }
-
